--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -347,6 +347,10 @@ where $f$ is continuous on the range of $g:[a,b]\rightarrow\mathbb{R}$ whose der
 <em>MathInContext</em>: <a href="https://en.wikipedia.org/wiki/Gloria_Conyers_Hewitt">Gloria Conyers Hewitt</a>, an African-American mathematician specialized in group theory and abstract algebra and the 4th African-American woman to receive a PhD in Mathematics in the USA. Additional materials to learn more: <a href="https://mathematicallygiftedandblack.com/honorees/gloria-conyers-hewitt/"><em>Gloria Conyers Hewitt</em>, Black History Month 2018 Honoree in Mathematically Gifted and Black</a>. <a href="https://mathwomen.agnesscott.org/women/hewitt.htm"><em>Gloria Hewitt</em> in Biographies of Women Mathematicians (by Shannon Hensley)</a>.
 </p>
 <p>
+<b>Media to Watch</b>:
+<a href="https://www.youtube.com/watch?v=q_CmUbctfzo"><em>Video-Lecture on Integration by Substitution</em> by Prof. Robert Ghrist</a>.
+</p>
+<p>
 <b>Learning Objectives:</b>
 a) Recognize when to use integration by substitution.
 b) Use substitution to evaluate indefinite integrals.
@@ -359,7 +363,7 @@ The definite integral is the signed area under a function. Because of this, we c
 \[\int_a^b\,(f(x)-g(x))\,\mathrm{d}x.\]
 </p>
 <p>
-<em>MathInContext</em>: <a href="https://en.wikipedia.org/wiki/Katherine_Johnson">Katherine Johnson</a>, African-American mathematician whose calculations of orbital mechanics where fundamental for the sucess of NASA's first crewed spaceflights. Additional materials to learn more: <a href="https://www.youtube.com/watch?v=nKxgieXQ82w"><em>Katherine Johnson: An American Hero</em> by NASA</a>. <a href="https://www.youtube.com/watch?v=SvsHjWVgqcY&t=33s"><em>The Woman Behind Project Mercury (Outlier)</em> by Timeline</a>. <b>Film to Watch:</b> <a href="https://en.wikipedia.org/wiki/Hidden_Figures">Hidden Figures</a>.
+<em>MathInContext</em>: <a href="https://en.wikipedia.org/wiki/Katherine_Johnson">Katherine Johnson</a>, African-American mathematician whose calculations of orbital mechanics where fundamental for the sucess of NASA's first crewed spaceflights. Additional materials to learn more: <a href="https://www.youtube.com/watch?v=nKxgieXQ82w"><em>Katherine Johnson: An American Hero</em> by NASA</a>. <a href="https://www.youtube.com/watch?v=SvsHjWVgqcY&t=33s"><em>The Woman Behind Project Mercury (Outlier)</em> by Timeline</a>. <b><em>Film to Watch:</em></b> <a href="https://en.wikipedia.org/wiki/Hidden_Figures">Hidden Figures</a>.
 </p>
 <p>
 <b>Learning Objectives:</b>
