--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -86,11 +86,11 @@
 	         <li class="nav-item"><a class="nav-link active" href="#" style="background-color: #F15A22!important;color: #0C2340!important;"><i class="fas fa-less-than-equal "></i></a></li>
 	         <li class="nav-item"><a class="nav-link" href="#basic">Basic Information</a></li>
 					 <li class="nav-item"><a class="nav-link" href="#lectures">Lectures</a></li>
-           <li class="nav-item"><a class="nav-link" href="#biblio">Bibliography and more</a></li>
+           <li class="nav-item"><a class="nav-link" href="#biblio">Bibliography</a></li>
            <li class="nav-item"><a class="nav-link" href="#grading">Grading</a></li>
            <li class="nav-item"><a class="nav-link" href="#homework">Homework</a></li>
            <li class="nav-item"><a class="nav-link" href="#exams">Exams</a></li>
-           <li class="nav-item"><a class="nav-link" href="#tutoring">Tutoring Services</a></li>
+           <li class="nav-item"><a class="nav-link" href="#tutoring">Tutoring & Homework Sessions</a></li>
            <li class="nav-item"><a class="nav-link" href="#handouts">Other Materials</a></li>
         </ul>
     </nav>
@@ -774,7 +774,7 @@ All homework will be assigned through WeBWork. You can access WebWork through th
   <a class="btn btn-secondary" href="https://webwork.math.utsa.edu/webwork2/MAT_1224_009_Spring_2023/" role="button" style="width:30%;">WebWork</a>
 </p>
 <p>
-You will have one week starting at 11.00 am after each lecture to complete each of the assignments. In case you miss this first deadline, you will have an extra week to complete the assignments for 70% of the original credit.
+To complete each of the assignments, you will have until the Sunday of the week after the opening date. In case you miss this first deadline, you will have an extra week to complete the assignments for 70% of the original credit.
 </p>
 </div>
 <hr/>
@@ -803,9 +803,16 @@ In accordance with the <a href="https://asap.utsa.edu/terms.htm">2022 Spring Fin
 </div>
 <hr/>
 <div id="tutoring">
-<h2 class="display-4">Tutoring Services</h2>
+<h2 class="display-4">Homework Sessions & Tutoring Services</h2>
 <p>
-UTSA offers the possibilities to students to get free tutoring both in person and online.
+There will be homework sessions by the teaching assistants of the course. Additionally, UTSA offers the possibilities to students to get free tutoring both in person and online.
+</p>
+<h3>Homework Sessions</h3>
+<p>
+The MAT1224 teaching assistants, Michael Brinkman and Sean Roberson, will offer homework help sessions and homework recitation sesions. In the <em>homework help sessions</em>, you can walk in person or online and work alone or with other fellow students on the homework problems with the assistance of the TA. In the <em>homework recitations</em>, the TA will review the material already covered and work through some selected examples. The recitations will only be online and will be recorded.
+</p>
+<p>
+  More details regarding the arrangements, schedule and location of the homework sessions can be found <a href="https://utsa.blackboard.com/">in the UTSA Blackboard platform of the course</a>, which can be found in the <em>Syllabus and Schedule</em> sections of the course's blackboard.
 </p>
 <h3>UTSA Tutoring Services</h3>
 <p>
@@ -813,7 +820,7 @@ UTSA students can access tutoring by dropping into the <em>Tomás Rivera Center 
 </p>
 <h3>TutorMe</h3>
 <p>
-UTSA continues its partnership with TutorMe, a free 24/7 online tutoring platform, to offer additional on-demand tutoring support to students this semester. UTSA students have access to six hours of free tutoring per week through this service. To access this, use <a href="https://utsa.blackboard.com/">the link available in the UTSA Blackboard platform of the course</a>, which can be found in the <em>Start Here</em> and the <em>Tools</em> sections of the course.
+UTSA continues its partnership with TutorMe, a free 24/7 online tutoring platform, to offer additional on-demand tutoring support to students this semester. UTSA students have access to six hours of free tutoring per week through this service. To access this, use <a href="https://utsa.blackboard.com/">the link available in the UTSA Blackboard platform of the course</a>, which can be found in the <em>Start Here</em> and the <em>Tools</em> sections of the course's blackboard.
 </p>
 </div>
 <hr/>
